--- a/docker/virtlet/ubuntu22/Dockerfile
+++ b/docker/virtlet/ubuntu22/Dockerfile
@@ -7,7 +7,7 @@ RUN mkdir -p /etc/kubevmm
 ADD *.sh /home/kubevmm/core/
 
 ADD virtlet /home/kubevmm/core/virtlet
-#ADD kubesys /home/kubevmm/core/kubesys
+ADD kubesys /home/kubevmm/core/kubesys
 ADD utils /home/kubevmm/core/utils
 
 ADD *.cfg /home/kubevmm/core/utils
